--- a/_posts/2020-07-06-bst.md
+++ b/_posts/2020-07-06-bst.md
@@ -13,36 +13,23 @@ tag: Data Structure
 
 # 이진 탐색 트리 (Binary Search Tree)
 
-이진 탐색 트리(Binary Search Tree)는 차수(Degree)가 2인 트리이다. 저장된 데이터의 탐색을 빠르게 하기 위해서 고안되었다. 이진 탐색 트리는 어떻게 데이터를 더욱 빠르게 찾아 나갈 수 있는 것일까?
+**이진 탐색 트리(Binary Search Tree, BST)** 는 차수(Degree)가 2인 트리입니다. 연결된 리스트(Linked List)가 해결해주지 못하는 탐색(Search)을 최적화하기 위해 고안된 자료구조입니다. 이런 특성 때문에 이름에도 탐색(Search)이 붙었습니다. 이진 탐색 트리가 데이터를 빠르게 탐색할 수 있는 비결은 무엇일까요? 해답은 이진 탐색 트리가 데이터를 보관하는 방법에 대한 특별한 규칙(Rule)에 있습니다. 아래는 한 이진 탐색 트리의 예시입니다.
 
-우리가 어디 있는지 모르는 것을 찾을 때는 평소 경험에 비추어 그것이 있을 장소를 추측한다. 이런 추측이 잘 맞아 떨어지는 이유는 전체 구조를 설계하는 데에 관한 규칙이 있고 많은 경우 그런 규칙을 따르기 때문이다. 때문에 이런 규칙을 자료구조, 그 중에서도 트리에 반영한다면 우리가 원하는 자료를 빠르게 탐색할 수 있다.
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
 
-예를 들어, 다음과 같은 자료가 있는 경우를 생각해보자. 
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
 
-| Account # | Name  | Amount  | Type              |
-| --------- | ----- | ------- | ----------------- |
-| 1001      | Smith | 100,000 | Simple Interest   |
-| 1002      | Koh   | 50,000  | Compound Interest |
-| 1003      | Moon  | 10,000  | Simple Interest   |
-| 1004      | Kim   | 30,000  | No Interest       |
+위 트리에는 어떤 규칙이 있는 것일까요? 루트와 그 자식 노드에 해당하는 두 노드를 봅시다. 루트의 값은 8이며 왼쪽 자식 노드의 값은 3, 오른쪽 자식 노드의 값은 10입니다. 루트를 기준으로 더 작은 값은 왼쪽 자식 노드로, 더 큰 값은 오른쪽 자식 노드로 배치된 것을 볼 수 있습니다. 다음에는 아래로 내려가 값이 3인 노드와 그 자식 노드를 봅시다. 이 세 노드도 마찬가지로 3보다 작은 값인 1은 왼쪽 자식 노드로, 6은 오른쪽 자식 노드로 배치된 것을 볼 수 있습니다.
 
- Account Number를 Value로 하는 노드로 구성된 자료구조가 있다고 하자. 이것이 Linked List와 이진 탐색 트리로 구현된 모습을 그림으로 나타내면 다음과 같다. 여기서 이진 탐색 트리 루트 노드의 Value는 1003이며 이진 탐색 트리의 규칙에 따라 해당 노드의 값보다 보다 더 큰 값은 오른쪽 레퍼런스를 받고, 해당 노드의 값보다 더 작은 값은 왼쪽 레퍼런스를 받는다.
-
-![tree_1](https://user-images.githubusercontent.com/45377884/86537551-b8e88800-bf2a-11ea-93a8-b58720000bc8.png)
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
-
-위 그림에서 *1004* 의 값을 가지는 노드의 위치를 찾는 문제가 있다고 하자. Linked List처럼 선형으로 이루어진 자료구조의 경우에는 총 4번의 반복을 해야 1004를 찾을 수 있다. 하지만 이진 탐색 트리에서는 1003을 거쳐 1004까지 가는 2번의 반복만으로 원하는 값에 접근할 수 있다.
+이진 탐색 트리의 모든 값은 이 규칙을 따라 배치됩니다. 부모 노드보다 값이 큰 노드는 오른쪽에, 값이 작은 노드는 왼쪽에 배치됩니다. 이런 규칙이 있기 때문에 더욱 빠르게 찾을 수 있습니다. 연결된 리스트에서의 탐색 과정과 비교해 보겠습니다. $8, 3, 10, 1, 6, 14, 4, 7, 13$ 이 차례대로 저장된 연결된 리스트와 이진 탐색 트리가 있다고 해봅시다. 연결된 리스트에서 $13$ 을 찾기 위해서는 모든 요소와 비교를 해야 하므로 총 9번의 Operation을 거쳐야 합니다. 하지만 이진 탐색 트리에서는 $8, 10, 14, 13$ 만 비교하면 되니 4번의 Operation 만으로 원하는 탐색을 할 수 있습니다. 이진 탐색 트리의 탐색에 대해서는 아래에서 더 자세히 살펴보겠습니다.
 
 
 
-## 구조
+## Structure
 
-이진 탐색 트리에는 총 3개의 레퍼런스가 있다. 첫 번째는 해당 노드의 왼쪽에서 다음 노드를 가리키는 레퍼런스(Left Hand Side, LHS)이며 두 번째는 오른쪽에서 다음 노드를 가리키는 레퍼런스(Right Hand Side, RHS)이다. 마지막으로 해당 노드의 값을 나타내는 노드가 있다. 아래 코드에 구현은 되어있지 않지만, 위에서 설명했듯 LHS는 해당 노드보다 작은 값이 저장된 노드를 가리키고 RHS는 해당 노드보다 큰 값이 저장된 노드를 가리킨다.
+연결된 리스트의 노드 하나에는 총 2개의 레퍼런스가 있었습니다. 하나는 값을 가리키는 레퍼런스이고 나머지 하나는 다음 노드를 가리키는 레퍼런스로, 넥스트(Next)라고 불렀습니다. 이진 탐색 트리는 가리켜야 하는 노드가 2개이기 때문에 총 3개의 레퍼런스를 가지고 있습니다. 그 중 왼쪽 자식 노드를 가리키는 레퍼런스를 LHS(Left Hand Side)라고 하고, 오른쪽 자식 노드를 가리키는 레퍼런스는 RHS(Right Hand Side)라고 합니다.
 
-또한 트리 구조는 맨 처음에 루트 노드에 대한 접근만 허용된다. 트리 내에 존재하는 모든 값은 이 루트 노드를 통해야만 탐색, 삽입, 삭제할 수 있다.
-
-아래는 이진 탐색 트리의 노드를 파이썬 코드로 구현한 것이다.
+연결된 리스트가 헤드를 통해서만 다른 노드에 접근할 수 있었던 것처럼 트리 역시 첫 번째에 해당하는 루트를 통해서만 다른 노드에 접근할 수 있습니다. 아래는 이진 탐색 트리의 노드를 파이썬 코드로 구현한 것입니다.
 
 ```python
 class TreeNode:
@@ -74,7 +61,7 @@ class TreeNode:
         self.value = value
 ```
 
-그리고 아래는 이진탐색 트리의 루트와 각종 Operation을 파이썬 코드로 적어놓은 것이다. 해당 코드에서의 `"..."` 은 앞으로 채워나갈 것이다.
+아래는 이진 탐색 트리의 루트와 이진 탐색 트리에서 가능한 여러 Operation을 파이썬 코드로 적어놓은 것입니다.
 
 ```python
 from bst import TreeNode
@@ -106,17 +93,70 @@ class BinarySearchTree:
 
 
 
-## 삽입
+## 이진 탐색 트리에서의 탐색
 
-이진 탐색 트리에서 삽입은 다음과 같은 과정을 거쳐 완성된다. 일단 삽입하고자 하는 값이 현재 노드와 같을 경우에는 그 자리에서 바로 리턴한다. 하지만 그렇지 않을 경우에는 계속 해당 노드의 값과 삽입할 값을 비교해나가야 한다. 삽입할 값이 해당 노드의 값보다 큰 경우에는 RHS가 가리키는 노드로 이동하며 RHS가 가리키는 노드가 없을 경우에는 그 자리에 삽입이 이루어진다. 반대로 삽입할 값이 해당 노드의 값보다 작은 경우에는 LHS가 가리키는 노드로 이동하며 LHS가 가리키는 노드가 없을 경우에는 그 자리에 삽입이 이루어진다.
+이진 탐색 트리 속에 우리가 원하는 값이 있는지 없는지 탐색(Search)하는 과정을 알아봅시다. 이진 탐색 트리에서 데이터를 저장할 때 세웠던 규칙이 빛을 발할 때가 되었습니다. 탐색하려는 값이 우리가 보고 있는 노드의 값보다 클 경우에는 RHS를 따라 이동하고, 작을 경우에는 LHS를 따라 이동합니다. 이전처럼 우리가 원하는 값을 발견할 경우에는 True를 반환하고 그렇지 않은 경우에는 다시 같은 과정을 재귀적으로(Recursive) 수행합니다. 재귀적으로 아래쪽으로 내려가다가 자식 노드가 없을 경우, 즉 리프 노드의 값이 우리가 원하는 값이 아닐 경우에는 False를 반환하고 함수를 끝마칩니다.
 
-RHS혹은 LHS로 크기를 비교하며 이동하는 작업은 재귀(Recursion)을 통해서 삽입할 값이 노드에 배치되기 전까지 반복된다. 아래의 코드는 삽입되는 과정을 파이썬 코드로 구현한 것이다.
+위에서 사용한 예시를 다시 가져와 보겠습니다.
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
+
+위와 같은 이진 탐색 트리에서 $13$ 을 찾기 위해서는 어떻게 해야할까요? 가장 먼저 할 수 있는 것은 루트 노드로 접근하여 값을 비교하는 것입니다. $13$ 은 $8$ 보다 크므로 RHS를 따라 이동합니다. 다음 노드의 값은 $10$ 입니다. $13$ 은 $10$ 보다도 크기 때문에 또 RHS를 따라 이동합니다. 다음 노드의 값은 $14$ 입니다. $13$ 은 $14$ 보다 작기 때문에 LHS를 따라 이동합니다. 그 다음 노드의 값이 우리가 찾던 $13$ 이므로 True를 반환하고 함수를 마칩니다.
+
+트리에 없는 값을 탐색하는 과정도 보겠습니다. $5$ 는 어떻게 탐색할 수 있을까요? 나머지 규칙은 위와 같습니다. 루트로 접근하여 $5$ 가 $8$ 보다 작으므로 LHS를 따라 이동, $3$ 보다는 크므로 RHS를 따라 이동, $6$ 보다는 작으므로 LHS를 따라 이동합니다. 다음 노드의 값은 $4$ 입니다. $5$ 가 $4$ 보다 크기 때문에 RHS를 따라 이동해야 하는데 더 이상 이동할 노드가 없습니다. 그러므로 False를 반환하고 함수를 마치게 됩니다.
+
+
+
+아래의 코드는 이진 탐색 트리에서의 탐색을 파이썬 코드로 구현한 것입니다.
+
+```python
+def search(self, value, node=None):
+    """
+    같은 값을 발견하면 True를 반환하도록 합니다.
+    """
+    if node is None:
+        node = self.root
+    if value == node.getValue():
+        return True
+    """
+    그렇지 않은 경우 크기비교를 하며 RHS, LHS로 나아가게 되고
+    일치하는 값을 찾지 못하고 빈 노드를 만나면 False를 반환합니다.
+    """
+    if value > node.getValue():
+        if node.getRHS() is None:
+            return False
+        else:
+            return self.search(value, node.getRHS())
+    if value < node.getValue():
+        if node.getLHS() is None:
+            return False
+        else:
+            return self.search(value, node.getLHS())
+```
+
+
+
+## 이진 탐색 트리에서의 삽입
+
+이진 탐색 트리에서의 삽입(Insert)하는 과정에 대해 알아봅시다. 삽입은 탐색과 매우 유사합니다. 삽입을 규칙에 맞게 하기 때문에 탐색이 쉬운 것이니까요. 
+
+삽입 역시 삽입 하려는 값이 해당 노드보다 작으면 LHS를 따라 이동하고, 크면 RHS를 따라 이동하는 과정을 재귀적으로 반복합니다. 탐색에서 원하는 값이 발견되면 True를 반환하였지만, 삽입은 원하는 값이 있으면 아무것도 반환하지 않고 그대로 함수를 마칩니다. 그리고 탐색에서는 더 이상 내려갈 자식 노드가 없으면 False를 반환했지만, 삽입에서는 그 자리에 우리가 원하는 값이 담긴 노드를 배치하고 함수를 마치게 됩니다. 삽입도 같은 예시를 통해 알아봅시다.
+
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
+
+탐색 과정에서 트리에 없었던 $5$ 를 삽입해 보겠습니다. 탐색과 같은 과정을 거쳐 $8, 3, 6, 4$ 를 따라 이동합니다. 탐색은 $4$ 이하에 RHS를 따라 이동할 노드가 없었기 때문에 False를 반환했지만 삽입은 그 자리에 $5$ 를 삽입하고 함수를 마치게 됩니다.
+
+아래의 코드는 이진 탐색 트리에서의 삽입을 파이썬 코드로 구현한 것입니다.
 
 ```python
 def insert(self, value, node=None):
     """
     재귀 탈출 조건문 설정하기
-    노드가 채워져 있지 않을 경우에는 값을 할당하도록 되어있다.
+    노드가 채워져 있지 않을 경우에는 값을 할당하도록 되어있습니다.
     """
     if node is None:
         node = self.root
@@ -127,7 +167,7 @@ def insert(self, value, node=None):
     값이 같을 경우 그대로 반환
     값이 큰 경우 RHS를 따라 이동하여 재귀를 통해 같은 함수를 실행
     값이 작은 경우 LHS를 따라 이동하여 재귀를 통해 같은 함수를 실행
-    둘 모두 값이 존재하지 않을 경우에는 해당 값을 할당하도록 한다.
+    둘 모두 값이 존재하지 않을 경우에는 해당 값을 할당하도록 합니다.
     """
     if value == node.getValue():
         return
@@ -146,97 +186,50 @@ def insert(self, value, node=None):
 
 
 
-![tree_2](https://user-images.githubusercontent.com/45377884/86537910-5e9cf680-bf2d-11ea-9c4c-3748f3cb11c6.png)
+## 이진 탐색 트리에서의 삭제
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+다음은 삭제를 알아볼 차례입니다. 이진 탐색 트리에서의 삭제는 이전의 자료 구조보다 훨씬 더 까다롭습니다. 이진 탐색 트리에서 노드를 삭제하는 경우의 수는 3개이므로 각각을 나누어 생각해야 합니다.
 
-위에서 $3, 2, 0, 5, 7, 4$ 순서대로 삽입이 이루어진다고 해보자. 먼저 아무 노드도 존재하지 않는 상태에서 3이 삽입되어야 하므로 3은 루트 노드에 삽입된다. 그리고 2는 3보다 작으므로 LHS 레퍼런스를 따라가게 된다. 이 때, LHS 레퍼런스가 가리키는 노드가 없으므로 그 자리에 2가 삽입된다. 0 또한 3보다 작으므로 LHS 레퍼런스를 따라가게 되며 레퍼런스가 가리키는 노드인 2와 비교한다. 0은 2보다도 작으므로 한 번 더 LHS 레퍼런스를 따라가게 되며 레퍼런스가 가리키는 노드가 없으므로 그 자리에 0이 삽입된다. 5가 삽입될 때는 루트 노드의 값인 3과 비교하였을 때 5가 더 큰 값이므로 RHS 레퍼런스를 따라가게 되며 이 레퍼런스가 가리키는 값이 없으므로 해당 자리에 5가 삽입된다. 이런 과정을 계속 반복하면서 7과 4를 삽입하면 위와 같은 트리가 생성된다.
+첫 번째는 자식 노드를 갖지 않는, 즉 리프 노드의 값을 삭제하는 경우입니다. 가장 간단한 케이스이기도 합니다. 이 때는 해당 노드의 부모 노드가 가리키는 레퍼런스를 제거함으로써 값을 삭제할 수 있습니다. 아래 그림을 봅시다.
 
+![deletion_bst1](https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree.png)
 
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.javatpoint.com/deletion-in-binary-search-tree">javatpoint.com</a></p>
 
-## 탐색
+위 그림은 85를 삭제하는 과정을 이미지로 나타낸 것입니다. 이 노드를 가리키고 있는 부모 노드의 레퍼런스를 제거하면 아무 노드의 가리킴도 받지 않는 85가 있는 노드는 가비지 컬렉터(Garbage collector)에 의해서 삭제됩니다.
 
-해당 트리에 원하는 값이 있는지(True) 없는지(False)를 반환하는 탐색 과정을 생각해보자. 이진 탐색 트리에서의 탐색은 값이 삽입되는 과정과 매우 비슷하게 이루어진다. 해당 노드의 값이 탐색할 값과 동일할 경우 True를 반환한다. 하지만 다를 경우에는 일련의 재귀과정을 거쳐야 한다. 탐색하려는 값이 해당 노드의 값보다 클 경우에는 RHS를 따라 이동한다. RHS를 따라 이동했을 때 아무런 노드도 존재하지 않는다면 False를 반환한다. 탐색하려는 값이 해당 노드의 값보다 클 경우도 마찬가지다. 이 경우에는 LHS를 따라 이동한 뒤 값을 비교하는 과정을 반복하게 되며 LHS를 따라 이동했을 때 아무런 노드도 존재하지 않는다면 False를 반환하게 된다.
+두 번째는 하나의 자식 노드를 갖는 노드의 값을 삭제하는 경우입니다. 이 케이스는 연결된 리스트에서 요소를 삭제하는 경우와도 유사합니다. 방법은 삭제하려는 값이 담긴 노드를 가리키는 레퍼런스를 그 자식 노드를 가리키도록 하게 됩니다. 아래 그림을 보겠습니다.
 
-아래의 코드는 이진 탐색 트리에서의 탐색을 파이썬 코드로 구현한 것이다.
+ ![deletion_bst2](https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree2.png)
 
-```python
-def search(self, value, node=None):
-    """
-    같은 값을 발견하면 True를 반환하도록 한다.
-    """
-    if node is None:
-        node = self.root
-    if value == node.getValue():
-        return True
-    """
-    그렇지 않은 경우 크기비교를 하며 RHS, LHS로 나아가게 되고
-    일치하는 값을 찾지 못하고 빈 노드를 만나면 False를 반환한다.
-    """
-    if value > node.getValue():
-        if node.getRHS() is None:
-            return False
-        else:
-            return self.search(value, node.getRHS())
-    if value < node.getValue():
-        if node.getLHS() is None:
-            return False
-        else:
-            return self.search(value, node.getLHS())
-```
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.javatpoint.com/deletion-in-binary-search-tree">javatpoint.com</a></p>
 
+위 그림은 12를 삭제하는 과정을 이미지로 나타낸 것입니다. 이 노드를 가리키고 있는 레퍼런스를 12가 있는 자식 노드인 6을 가리키도록 합니다. 이전 케이스와 같이 아무 레퍼런스의 가리킴도 받지 못하게 된 12는 가비지 컬렉터에 의해서 사라지게 됩니다.
 
-
-![tree_3](https://user-images.githubusercontent.com/45377884/86538349-8a6dab80-bf30-11ea-9134-0133924fcbf1.png)
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
-
-위 그림에서 4를 찾는 경우를 생각해보자. 여기서도 트리의 특성상 루트 노드부터 접근하여 값을 비교한다. 4는 3보다 큰 값이므로 RHS 레퍼런스를 따라 이동하게 된다. 다음으로는 레퍼런스가 가리키는 노드의 값인 5와 4를 다시 비교하게 되며 4가 5보다 작으므로 이번에는 LHS 레퍼런스를 따라 이동하게 된다. 이번에는 레퍼런스가 가리키는 값인 4와 4를 비교하게 되는데 두 값은 같은 값이므로 True를 반환하게 된다.
-
-또 위와 같은 트리에서 6을 찾는 경우를 생각해보자. 6은 3보다 큰 값이므로 RHS 레퍼런스를 따라 이동하고 레퍼런스가 가리키는 노드의 값인 5와 6을 다시 비교한다. 6은 5보다도 크므로 이번에도 RHS 레퍼런스를 따라 이동하고 다시 레퍼런스가 가리키는 노드의 값인 6과 7을 비교한다. 이 때는 6이 7보다 작으므로 이번에는 LHS 레퍼런스를 따라 이동해야 한다. 하지만 7에서 LHS 레퍼런스가 가리키는 노드가 없으므로 결국 False를 반환한다.
-
-
-
-## 삭제
-
-이진 탐색 트리를 포함하여 모든 트리 구조에서의 삭제는 Linked List에서의 삭제보다 훨씬 더 까다롭다. 이진 탐색 트리에서 원하는 노드를 삭제할 때 3가지 경우의 수가 발생한다.
-
-첫 번째는 자식 노드를 갖지 않는, 즉 잎(Leaves) 노드의 값을 삭제하는 경우이다. 이 경우는 해당 노드의 부모 노드가 가리키는 레퍼런스를 삭제함으로서 가장 간단하게 노드를 삭제하여 값을 삭제할 수 있다. 아래에서 값이 0인 노드를 삭제하는 경우가 여기에 속한다.
-
-![tree_del1](https://user-images.githubusercontent.com/45377884/86538908-04536400-bf34-11ea-8c93-e3936e4a8b4d.png)
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
-
-두 번째는 한 개의 자식 노드를 갖는 노드의 값을 삭제하는 경우이다. 이 때는 해당 노드의 부모 노드가 가리키는 레퍼런스를 해당 노드의 자식 노드를 가리키도록 설정함으로써 원하는 노드를 삭제할 수 있다. 레퍼런스의 가리킴을 받지 못하는 노드는 추후 가비지 컬렉터(Garbage collector)에 의해서 자동으로 삭제된다. 아래 그림에서 2를 삭제하는 경우가 여기에 해당한다.
-
-![tree_del2](https://user-images.githubusercontent.com/45377884/86538975-441a4b80-bf34-11ea-8b6b-6fb8a2e92a81.png)
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
-
-마지막은 두 개의 자식 노드를 갖는 노드의 값을 삭제하는 경우이다. 이 경우가 가장 까다롭다. 기본적인 아이디어는 기존에 트리에 존재하는 다른 값으로 대체하여 넣어준 뒤 중복되는 값을 삭제하는 과정으로 이루어진다. 아래의 그림에서 3의 값을 삭제하는 경우가 여기에 해당한다.
+마지막은 삭제하려는 값이 있는 노드가 두 개의 자식 노드를 갖는 경우입니다. 가장 까다로운 경우입니다. 기본적인 아이디어는 기존에 트리에 존재하는 다른 값으로 대체하여 넣어준 뒤에 중복되는 값을 삭제하는 것입니다. 아래 그림을 보겠습니다.
 
 ![tree_del3](https://user-images.githubusercontent.com/45377884/86538978-454b7880-bf34-11ea-98e0-191b3588eb97.png)
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
 
-특정 노드를 삭제하는 경우마다 2가지 경우의 수가 있다. 위 그림에서 왼쪽 경로는 3을 4로 대체한 뒤 중복되는 값인 4를 삭제하는 과정으로 이루어져 있다. 여기서 4를 삭제할 때는 자식 노드를 갖지 않으므로 첫 번째 삭제 방법으로 지우면 된다. 오른쪽 경로는 3을 2로 대체한 뒤 중복되는 값인 2를 삭제하는 과정으로 이루어져 있다. 2를 삭제할 때는 하나의 자식 노드만을 가지므로 두 번째 삭제 방법으로 지우면 된다.
+이번 케이스는 2가지 경우의 수가 있습니다. 위 그림은 맨 아래에 있는 이진 탐색 트리에서 $3$ 을 제거할 때의 2가지 경우의 수를 나타낸 것입니다.
 
-그런데 이렇게 대체되는 값은 어떻게 정하는 것일까? 일단은 아무 값이나 넣을 수는 없다. 만약 3을 0으로 대체한 뒤 0을 삭제하는 방법을 선택한다면 루트 노드가 0인데 LHS는 더 큰 값인 2를 가리키면서 이진 탐색 트리 전체의 규칙이 깨져버리게 된다. 이런 현상이 발생하기 때문에 우리는 대체하기에 가장 적절한 값을 찾아야만 한다.
+왼쪽 경로는 $3$ 대신 $4$ 를 복사해 넣은 후 $4$ 에 해당하는 리프 노드를 삭제하는 과정으로 이루어져 있습니다. 리프 노드는 첫 번째로 알아보았던 그리고 오른쪽 경로는 $3$ 대신 $2$ 를 복사해 넣은 후 원래 $2$ 가 있던 노드를 삭제하는 과정으로 이루어져 있지요. 이렇게 새롭게 생성된 이진 탐색 트리는 기존의 규칙을 깨뜨리지 않습니다. 왼쪽 경로에서 $4$ , 오른쪽 경로에서 $2$ 라는 값은 어떻게 선택되는 것일까요?
 
-사실 대체할 수 있는 값은 2개로 정해져 있다. 먼저, 우리가 삭제할 값이 있는 노드를 기준으로 RHS에서 가장 왼쪽에 위치한 값이다. 일단 RHS로 한 번 이동한 후에 LHS를 따라서만 이동하고 LHS가 없을 때는 그 값을 채택하여 삭제할 값과 대체하면 된다. 이렇게 선택된 값은 삭제할 값보다는 무조건 작지만 RHS로 갈라진 작은 트리에서는 최댓값이므로 대체하여도 규칙을 어기지 않게 되기 때문이다.
+일단 아무 값이나 선택하는 것은 안됩니다. 예를 들어, $3$ 이 있던 자리에 $0$ 을 넣고 원래 $0$ 이 있는 노드를 삭제하게 되면 트리의 규칙이 깨져버리기 때문입니다. 선택하는 논리는 비교적 간단합니다. $3$ 보다 왼쪽에 있는 하위 트리(Sub tree)에서는 가장 큰 값을, 오른쪽에 있는 하위 트리에서는 가장 작은 값을 선택하면 됩니다.
 
-두 번째는 우리가 삭제할 값이 있는 노드를 기준으로 LHS에서 가장 오른쪽에 위치한 값이다. 일단 LHS로 한 번 이동한 후에 RHS를 따라서만 이동하고 RHS가 없을 때는 그 값을 채택하여 삭제할 값과 대체하면 된다. 이렇게 선택된 값은 삭제할 값보다는 무조건 작지만 LHS로 갈라진 작은 트리에서는 최댓값이므로 대체하여도 규칙을 어기지 않게 되기 때문이다.
+왼쪽에 있는 하위 트리에서 가장 큰 값이라도 오른쪽 하위 트리의 모든 값보다는 작으므로 이 값을 삭제하려는 노드에 중복시켜 넣어준 후 원래 노드를 삭제시키면 트리의 규칙을 어기지 않습니다. 오른쪽에 있는 하위 트리에서 가장 작은 값 역시 왼쪽 하위 트리에 있는 모든 값보다는 크기 때문에 삭제하려는 노드에 중복해준 후 원래 값이 있는 노드를 삭제시켜도 트리의 규칙을 어기지 않음을 알 수 있습니다.
 
-위 그림에서 왼쪽 방향에 있는 3을 4로 대체한 것은 첫 번째 방법을 따른 것이고, 오른쪽 방향에 있는 3을 2로 대체한 것은 두 번째 방향을 따른 것이다.
+트리에서 이런 값을 찾는 방법 역시 간단합니다. 먼저 왼쪽 하위 트리의 최댓값을 찾는 경우 *(그림에서 오른쪽 경로)* 부터 생각해봅시다. 이 경우는 삭제하려는 값이 있는 노드의 LHS를 따라 한 번 내려간 뒤, 이후부터는 항상 RHS만을 따라갑니다. 만약 더 이상 RHS가 없는 노드가 있다면 그 노드의 값이 중복해줄 값으로 선택됩니다. 위의 예시에서도 $3$ 이 있는 노드의 LHS를 따라 한 번 내려가면 $2$ 가 있는 노드가 됩니다. 다음부터는 RHS 만을 따라 내려가야 하지만 해당 노드에서 RHS가 없으므로 해당 노드의 값인 $2$ 가 삭제할 값을 대체하는 값이 됩니다. 다음으로 오른쪽 하위 트리의 최솟값을 찾는 경우 *(그림에서 왼쪽 경로)* 를 생각해봅시다. 위 그림에서 왼쪽 방향에 있는 3을 4로 대체한 것은 첫 번째 방법을 따른 것이고, 오른쪽 방향에 있는 3을 2로 대체한 것은 두 번째 방향을 따른 것이다. 이 때는 반대로 삭제하려는 값이 있는 노드의 RHS를 따라 한 번 내려간 뒤, 이후부터는 항상 LHS만을 따라갑니다. 그리고 더 이상 LHS가 없는 노드가 있다면 그 노드의 값이 중복해줄 값으로 선택됩니다. 위의 예시에서도 $3$ 이 있는 노드의 RHS를 따라 한 번 내려가면 $5$ 가 있는 노드가 됩니다. 다음부터는 LHS 만을 따라 내려가야 하므로 한 번 더 이동한 노드의 값은 $4$ 입니다. 다음에 또 LHS를 따라 이동해야 하지만 해당 노드에서 LHS가 없으므로 해당 노드의 값인 $4$ 가 삭제할 값을 대체하는 값이 됩니다.
 
-아래는 모든 삭제 과정을 파이썬 코드로 구현한 것이다.
+이렇게 복제된 값을 담고 있는 노드는 LHS나 RHS 중 하나의 레퍼런스가 없는 노드이므로 위에서 나왔던 리프 노드를 삭제하는 방법이나, 자식 노드가 하나인 노드를 삭제하는 방법을 사용하여 처리가 가능합니다. 아래는 모든 삭제 과정을 파이썬 코드로 구현한 것입니다.
 
 ```python
 def delete(self, value, node=None):
     if node is None:
         node = self.root
     """
-    삭제하길 원하는 값을 찾아가는 과정
+    삭제하려는 값을 찾아가는 과정
     """
     if node.getValue() < value:
         return self.delete(value, node.getRHS())
@@ -250,7 +243,7 @@ def delete(self, value, node=None):
         2개의 자식을 갖는 노드의 값 삭제하기
         여기서는 2가지 방법 중
         RHS로 이동 후 RHS에서 가장 왼쪽 값(최솟값)을
-        찾아 대체하는 방법을 사용하였다.
+        찾아 대체하는 방법을 사용하였습니다.
         """
         if node.getLHS() is not None and node.getRHS() is not None:
             nodeMin = self.findMin(node.getRHS())
@@ -259,7 +252,7 @@ def delete(self, value, node=None):
             return
         parent = node.getParent()
         """
-        자식 노드를 1개 갖는 노드의 값을 를 삭제하기
+        자식 노드를 1개 갖는 노드의 값을 삭제하는 코드입니다.
         """
         if node.getLHS() is not None:
             if node == self.root:
@@ -282,8 +275,7 @@ def delete(self, value, node=None):
                 node.getRHS().setParent(parent)
             return
         """
-        자식을 갖지 않는 노드의 값을 삭제하기
-        레퍼런스를 없애준다.
+        자식을 갖지 않는 노드의 값을 삭제하는 경우입니다.
         """
         if node == self.root:
             self.root = None
@@ -294,7 +286,7 @@ def delete(self, value, node=None):
         return
 ```
 
-위 코드에 있는 findMax(최댓값 찾기), findMin(최솟값 찾기) 함수는 정의되어 있지 않으므로 따로 정의해주어야 한다. 이진 탐색 트리의 특성에 따라서 최댓값은 RHS 레퍼런스만 따라가면 찾을 수 있으며, 최솟값은 LHS 레퍼런스만 따라가면 찾을 수 있다. 해당하는 노드의 레퍼런스가 가리키는 노드가 없을 경우에는 그 노드의 값이 최댓값 혹은 최솟값이 된다. 다음은 이것을 파이썬 코드로 구현한 것이다.
+위 코드에 있는 `findMax` 와 `findMin` 함수 역시 따로 정의를 해주어야 합니다. 아래와 같이 각 함수를 정의할 수 있습니다.
 
 ```python
 def findMax(self, node=None):
@@ -316,28 +308,38 @@ def findMin(self, node=None):
 
 ## Traversing
 
-영어 Traverse는 '가로지르다'라는 뜻을 가진 단어로, 트리에서의 Traversing이란 모든 노드의 값을 다니는 것이다. Linked List의 경우 리스트의 처음부터 끝까지 훑는 하나의 방법만이 존재하지만, 트리는 구조의 특성상 접근할 수 있는 방법이 많다. 위에서부터 아래로 하나씩 쓸 수도 있고 LHS부터 혹은 RHS부터도 훑고 갈 수 있다.
+Traverse는 '가로지르다'라는 뜻을 가진 단어입니다. 연결된 리스트나 배열에서 존재하지 않았던 **Traversing** 이란 말 그대로 모든 노드를 가로지르며 값을 훑는 것입니다. 이전에 배웠던 자료구조는 중간에 갈라지는 길이 없으므로 탐색(Search)하면서 모든 노드를 다 거칠 수 있었습니다. 하지만 트리에서는 길이 나누어지므로 값을 찾는 탐색만으로 모든 노드를 거쳐갈 수 없게 되지요.
 
-그리하여 트리를 Traverse하는 방법은 크게 2가지로 나뉘며 그 안에서도 여러 방법이 존재한다. 먼저 위에서 아래로 탐색하는 **깊이 우선(Depth first Traverse)** 에 대해서 알아보자. 깊이 우선 Traverse 에는 총 3가지 방법이 있다. 먼저 현재 노드의 값부터 LHS, RHS 순서로 탐색하는 **Pre-order Traverse** 이다. 두 번째는 LHS 쪽을 먼저 보고 현재 노드의 값을 본 후 RHS 값을 보는 **In-order Traverse** 가 있다. 마지막으로 LHS와 RHS를 다 본 후 현재 노드의 값을 보는 **Post-order Traverse** 가 있다. 예를 들어, 아래와 같은 트리가 있다고 하자.
+Traversing의 방법은 크게 **깊이 우선 탐색법(Depth first search, DFS)** 과 **너비 우선 탐색법(Breadth first search, BFS)** 두 가지로 나뉩니다. 먼저 깊이 우선 탐색법에 대해 알아봅시다. 깊이 우선 탐색법은 순서에 따라 3가지 방법이 있습니다. 첫 번째가 현재 노드의 값을 탐색한 후 LHS, RHS 순서로 탐색하는 **Pre-order Traverse** 입니다. 두 번째는 LHS를 먼저 탐색하고 현재 노드의 값을 탐색한 후 RHS값을 탐색하는 **In-order Traverse** 입니다. 마지막 방법으로는 LHS와 RHS를 모두 탐색한 후 맨 마지막에 현재 노드의 값을 탐색하는 Post-order Traverse가 있습니다. 아래의 트리를 보며 설명을 이어나가겠습니다. 아래의 노드를 각 방법으로 Traversing 해보겠습니다.
 
-<p align="center">
-<img src="https://user-images.githubusercontent.com/45377884/86583504-5e007080-bfbe-11ea-80ad-00a25287420e.png" alt="traverse_1" style="zoom:67%;" />    
-</p>
+![traversing](https://user-images.githubusercontent.com/45377884/90396747-b6ed1980-e0d1-11ea-917e-22d2814a2b5b.png)
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
-위 트리를 Pre-order Traverse 하며 리스트에 추가 후 출력하는 과정을 생각해보자. 먼저 루트부터 접근하므로 3을 리스트에 추가한다. 현재 노드의 값을 쓴 다음에는 LHS로 가야하기 때문에 LHS 레퍼런스를 따라 이동한 후 해당 노드의 값에 해당하는 2를 추가한다. 그리고 똑같은 과정을 거쳐 0을 추가한다. 0에서는 LHS 레퍼런스가 가리키는 값이 없으므로 RHS에 해당하는 1을 추가한다. 첫 번째 노드에서 LHS에 해당하는 값을 모두 보았으므로 이번에는 RHS방향으로 가서 5를 추가한다. 그리고는 해당 노드의 LHS가 가리키는 값인 4를 추가하며 값이 4인 노드는 아무것도 가리키고 있지 않으므로 다시 5의 RHS로 가서 7을 추가한다. 이런 과정을 거치면 [3, 2, 0, 1, 5, 4, 7, 6, 9, 8] 이 출력된다.
+먼저 Pre-order 방식입니다. 앞서 말했던 것처럼 이 방식은 현재 노드 - LHS를 따라 내려간 노드 - RHS를 따라 내려간 노드 순으로 탐색합니다. 아래 그림과 같은 방법으로 탐색이 이루어집니다. 접근하는 노드의 값을 무조건 얻기 때문에 루트 노드 부터 탐색하는 것을 볼 수 있습니다.
 
-다음으로는 In-order Traverse 하며 리스트에 추가 후 출력하는 과정을 생각해보자. 먼저 루트부터 접근하지만 해당 노드가 LHS를 가지므로 3을 추가할 수는 없다. LHS로 이동한 후에도 값이 2인 노드가 LHS를 가지므로 2를 추가할 수 없다. 다시 LHS를 따라 값이 0인 노드로 이동하면 해당 노드는 LHS 레퍼런스가 가리키는 값이 없으므로 0을 리스트에 추가한다. 해당 노드에서 LHS(없음) 검사를 마치고 현재 노드의 값(0)을 추가했으므로 다음은 RHS 레퍼런스를 따라 이동하여 1을 추가한다. 값이 1인 노드는 아무 노드도 가리키고 있지 않으므로 거슬러 올라가 2를 리스트에 추가한다. 값이 2인 노드 또한 RHS를 가지지 않으므로 3을 리스트에 추가한다. 이런 과정은 RHS에서도 동일하게 이루어지며 이런 과정을 거치면 [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] 이 출력된다.
+![pre-order](https://miro.medium.com/max/500/1*UGoV21qO6N8JED-ozsbXWw.gif)
 
-마지막으로 Post-order Traverse 하며 리스트에 추가 후 출력하는 과정을 생각해보자. 먼저 루트부터 접근하지만 해당 노드가 LHS와 RHS를 가지므로 3을 추가할 수 없다. 일단은 LHS가 먼저이므로 LHS를 따라 내려가고 동일한 과정을 거친다. 값이 0인 노드까지 내려가면 해당 노드의 LHS에는 값이 없고 RHS에는 값이 1인 노드가 있으므로 그쪽으로 이동한다. 값이 1인 노드는 LHS, RHS 모두 가지고 있지 않으므로 그제서야 자신의 값을 추가할 수 있다. 그리고 다시 거슬러 올라가며 0, 2를 추가하게 된다. 값이 3인 노드를 기준으로 LHS쪽이 모두 추가되었음에도 RHS쪽이 모두 추가되지 않았으므로 3을 추가할 수는 없다. 값이 3인 노드를 기준으로 RHS에서도 LHS 혹은 RHS를 가지는 노드는 나중에 기록된다는 것을 알 수 있다. 이러한 과정을 거치면 [1, 0, 2, 4, 6, 8, 9, 7, 5, 3]이 출력된다.
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
-각각의 Depth First Traverse 과정을 파이썬 코드로 구현하면 다음과 같다.
+다음은 In-order 방식입니다. 이 방식은 LHS를 따라 내려간 노드 - 현재 노드 - RHS를 따라 내려간 노드 순으로 탐색합니다. 아래 그림과 같은 방법으로 탐색이 이루어집니다. 현재 노드의 값을 얻지 않고 일단 LHS가 없을 때까지 내려가기 때문에 가장 왼쪽 아래에서부터 탐색이 시작되는 것을 볼 수 있습니다.
+
+![in-order](https://miro.medium.com/max/500/1*bxQlukgMC9cGv_MFUllX2Q.gif)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
+
+다음은 Post-order 방식입니다. 이 방식은 LHS를 따라 내려간 노드 - RHS를 따라 내려간 노드 - 현재 노드 순으로 탐색합니다. 아래 그림과 같은 방법으로 탐색이 이루어집니다. 현재 노드의 값을 얻지 않고 일단 LHS와 RHS가 모두 없을 때까지 내려가기 때문에 가장 왼쪽 아래에서부터 아래쪽을 다 훑고 난 후에 위로 올라오는 방향으로 탐색이 되는 것을 볼 수 있습니다.
+
+![post-order](https://miro.medium.com/max/500/1*UGrzA4qtLCaaCiNAKZyj_w.gif)
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
+
+각각의 깊이 우선 탐색 과정을 파이썬 코드로 구현하면 다음과 같습니다.
 
 ```python
 """
 일단 현재 노드의 값을 추가한 뒤
-LHS, RHS 순으로 탐색한다.
+LHS, RHS 순으로 탐색합니다.
 """
 def traversePreOrder(self, node=None):
     if node is None:
@@ -352,7 +354,7 @@ def traversePreOrder(self, node=None):
 
 """
 일단 현재 LHS 부분부터 최대한 탐색한 뒤
-현재 노드의 값을 추가하고 그 다음 RHS 부분을 탐색한다.
+현재 노드의 값을 추가하고 그 다음 RHS 부분을 탐색합니다.
 """
 def traverseInOrder(self, node=None):
     if node is None:
@@ -369,7 +371,7 @@ def traverseInOrder(self, node=None):
 일단 현재 LHS 부분부터 최대한 탐색한 뒤
 그 다음 RHS 부분을 탐색하고
 둘 다 존재하지 않을 때, 혹은 이미 탐색한 노드일 때
-현재 노드의 값을 추가한다.
+현재 노드의 값을 추가합니다.
 """
 def traversePostOrder(self, node=None):
     if node is None:
@@ -383,56 +385,53 @@ def traversePostOrder(self, node=None):
     return ret
 ```
 
+다음은 너비 우선 탐색법에 대해 알아보겠습니다. 이 방법은 같은 높이에 있는 것부터 탐색합니다. 루트 노드부터 탐색을 하게 되며 위쪽 레벨(level)의 노드를 모두 거치고 난 후 아래쪽 레벨로 내려갑니다. 아래 그림처럼 탐색이 이루어집니다.
 
+![bfs](https://miro.medium.com/max/500/1*2NIfAdSadsdK2rP015f6Xg.gif)
 
-트리 구조를 Traverse하는 두 번째 방법은 **너비 우선(Breadth First Traverse)** 으로 같은 높이에 있는 것들부터 탐색하는 방법이다. 이 방법은 큐(Queue)에 기반하고 있다. 먼저, 루트에 해당하는 값을 Enqueue 해준다. 다음 단계부터는 큐에서 하나씩을 Dequeue하게 된다. 그러면서 뽑힌 값을 가지는 노드의 자식 노드가 가지는 값을 Enqueue한다.  Depth First에서 보았던 예제를 통해 Breadth First Traverse가 어떻게 이루어지는지 알아보자.
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
-<p align="center">
-<img src="https://user-images.githubusercontent.com/45377884/86583504-5e007080-bfbe-11ea-80ad-00a25287420e.png" alt="traverse_1" style="zoom:67%;" />    
-</p>
+너비 우선 탐색법은 큐(Queue)를 사용하여 값을 뽑아냅니다. 가장 먼저 루트 노드의 값을 Enqueue 해줍니다. 다음 단계부터는 만들어진 큐에서 하나씩을 Dequeue 하게 되며 동시에 Dequeue 하는 값이 있는 노드의 자식 노드의 값을 Enqueue 해줍니다. Dequeue한 값이 있는 노드가 리프 노드라면 아무것도 Enqueue 해주지 않습니다. 위 그림에서는 다음과 같이 큐의 요소가 변하며 너비 우선 탐색이 이루어지는 것을 알 수 있습니다. 
 
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
+| Current | Queue       |
+| ------- | ----------- |
+|         | 1           |
+| 1       | 2, 3        |
+| 2       | 3, 4, 5     |
+| 3       | 4, 5, 6, 7  |
+| 4       | 5, 6, 7, 8  |
+| 5       | 6, 7, 8     |
+| 6       | 7, 8, 9, 10 |
+| 7       | 8, 9, 10    |
+| 8       | 9, 10       |
+| 9       | 10          |
+| 10      |             |
 
-| Current | Queue   |
-| ------- | ------- |
-|         | 3       |
-| 3       | 2, 5    |
-| 2       | 5, 0    |
-| 5       | 0, 4, 7 |
-| 0       | 4, 7, 1 |
-| 4       | 7, 1    |
-| 7       | 1, 6, 9 |
-| 1       | 6, 9    |
-| 6       | 9, 8    |
-| 9       | 8       |
-| 8       |         |
-
-먼저 루트의 값인 3을 큐에 삽입한다. 다음은 큐의 맨 앞인 3을 끄집어내고 값이 3인 노드의 자식 노드가 가지는 값인 2와 5를 삽입한다. 다음 단계에서는 2를 끄집어내면서 자식 노드의 값인 0을 추가한다. 다음 단계에서는 5를 끄집어내면서 자식 노드의 값인 4와 7을 삽입한다. 각 단계를 표로 나타내면 위와 같은 표가 되고 모든 값이 추가된 후 출력되는 값은 [3, 2, 5, 0, 4, 7, 1, 6, 9, 8] 이다.
-
-아래는 Breadth First Traverse를 파이썬 코드로 구현한 것이다.
+아래는 Breadth First Traverse를 파이썬 코드로 구현한 것입니다.
 
 ```python
 def traverseLevelOrder(self):
     """
-    먼저 큐를 만들고 루트 노드의 값을 추가한다.
+    먼저 큐를 만들고 루트 노드의 값을 추가해줍니다.
     """
     ret = []
     Q = Queue()
     Q.enqueue(self.root)
     
     """
-    아래의 과정을 큐가 비어있을 때까지 반복한다.
+    아래의 과정을 큐가 비어있을 때까지 반복합니다.
     """
     while not Q.isEmpty():
         """
-    	첫 번째 값을 Dequeue하여 뽑아낸다.
+    	첫 번째 값을 Dequeue하여 뽑아냅니다.
     	"""
         node = Q.dequeue()
         if node is None:
             continue
 		ret.append(node.getValue())
         """
-    	그 노드에서 LHS와 RHS가 가리키는 값을 Enqueue한다.
+    	그 노드의 자식 노드,
+    	즉 LHS와 RHS가 가리키는 값을 Enqueue합니다.
     	"""
         if node.getLHS() is not None:
             Q.enequeue(node.getLHS())
@@ -445,14 +444,14 @@ def traverseLevelOrder(self):
 
 ## 트리 구조의 성능
 
-다음은 각 Operation에서 이진 탐색 트리의 성능을 Linked List와 비교하여 나타낸 것이다. 아래에서 Worst Case는 노드의 개수와 트리의 높이(Height)가 같아지는 경우이며 이런 경우에는 Linked List와 아무런 차이가 없다. 하지만 일반적인 경우에는 이진 탐색 트리에서 탐색 Operation을 수행할 때 시간 복잡도가 $O(\log n)$ 으로 줄어드는 것을 볼 수 있다. 노드의 개수가 커질수록 두 자료구조에서 탐색을 수행하는 데 걸리는 시간 차이는 커지게 되며, 이렇게 탐색에 특화되어 있기 때문에 이진 탐색(Search) 트리라고 부른다.
+다음은 연결된 리스트와 일반적인 이진 탐색 트리, 그리고 최악의 경우인 이진 탐색 트리에서의 탐색, 삽입, 삭제, Traversing Operation의 성능을 비교한 표입니다. 아래에서 최악의 경우인 이진 탐색 트리는 어떻게 생겼을까요? [이곳](https://yngie-c.github.io/data structure/2020/07/02/tree/) 에서 다루었던 Degenerate Tree의 경우가 최악의 경우에 속합니다. 리프 노드 이전 노드까지의 모든 노드가 자식 노드를 하나만 갖는다면 레퍼런스가 갈라지는 부분이 없기 때문에 연결된 리스트와 탐색 시간이 같아지게 됩니다. 하지만 대부분의 경우 이진 탐색 트리에서 특정 요소를 찾는 Operation의 시간 복잡도는 $O(\log n)$ 으로 연결된 리스트의 $O(n)$ 보다 이상적입니다.
 
 |                     | Linked List | Binary Search Tree in Average | Binary Search Tree in Worst Case |
 | ------------------- | ----------- | ----------------------------- | -------------------------------- |
 | Search              | $O(n)$      | $O(\log n)$                   | $O(n)$                           |
 | Insert after search | $O(1)$      | $O(1)$                        | $O(1)$                           |
 | Delete after search | $O(1)$      | $O(1)$                        | $O(1)$                           |
-| Traverse            | $O(n)$      | $O(n)$                        | $O(n)$                           |
+| Traversing          | $O(n)$      | $O(n)$                        | $O(n)$                           |
 
 
 
