--- a/_posts/2020-07-06-bst.md
+++ b/_posts/2020-07-06-bst.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+<p align="center">layout: post
 title: 이진 탐색 트리 (Binary Search Tree)
 category: Data Structure
 tag: Data Structure
@@ -15,7 +15,7 @@ tag: Data Structure
 
 **이진 탐색 트리(Binary Search Tree, BST)** 는 차수(Degree)가 2인 트리입니다. 연결된 리스트(Linked List)가 해결해주지 못하는 탐색(Search)을 최적화하기 위해 고안된 자료구조입니다. 이런 특성 때문에 이름에도 탐색(Search)이 붙었습니다. 이진 탐색 트리가 데이터를 빠르게 탐색할 수 있는 비결은 무엇일까요? 해답은 이진 탐색 트리가 데이터를 보관하는 방법에 대한 특별한 규칙(Rule)에 있습니다. 아래는 한 이진 탐색 트리의 예시입니다.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
 
@@ -99,7 +99,7 @@ class BinarySearchTree:
 
 위에서 사용한 예시를 다시 가져와 보겠습니다.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
 
@@ -144,7 +144,7 @@ def search(self, value, node=None):
 
 삽입 역시 삽입 하려는 값이 해당 노드보다 작으면 LHS를 따라 이동하고, 크면 RHS를 따라 이동하는 과정을 재귀적으로 반복합니다. 탐색에서 원하는 값이 발견되면 True를 반환하였지만, 삽입은 원하는 값이 있으면 아무것도 반환하지 않고 그대로 함수를 마칩니다. 그리고 탐색에서는 더 이상 내려갈 자식 노드가 없으면 False를 반환했지만, 삽입에서는 그 자리에 우리가 원하는 값이 담긴 노드를 배치하고 함수를 마치게 됩니다. 삽입도 같은 예시를 통해 알아봅시다.
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Binary_search_tree.svg/1280px-Binary_search_tree.svg.png" alt="bst1" style="zoom: 33%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://en.wikipedia.org/wiki/Binary_search_tree">위키피디아 - 이진 탐색 트리</a></p>
 
@@ -192,7 +192,7 @@ def insert(self, value, node=None):
 
 첫 번째는 자식 노드를 갖지 않는, 즉 리프 노드의 값을 삭제하는 경우입니다. 가장 간단한 케이스이기도 합니다. 이 때는 해당 노드의 부모 노드가 가리키는 레퍼런스를 제거함으로써 값을 삭제할 수 있습니다. 아래 그림을 봅시다.
 
-![deletion_bst1](https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree.png)
+<p align="center"><img src="https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree.png" alt="deletion_bst1"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.javatpoint.com/deletion-in-binary-search-tree">javatpoint.com</a></p>
 
@@ -200,7 +200,7 @@ def insert(self, value, node=None):
 
 두 번째는 하나의 자식 노드를 갖는 노드의 값을 삭제하는 경우입니다. 이 케이스는 연결된 리스트에서 요소를 삭제하는 경우와도 유사합니다. 방법은 삭제하려는 값이 담긴 노드를 가리키는 레퍼런스를 그 자식 노드를 가리키도록 하게 됩니다. 아래 그림을 보겠습니다.
 
- ![deletion_bst2](https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree2.png)
+<p align="center"><img src="https://static.javatpoint.com/ds/images/deletion-in-binary-search-tree2.png" alt="deletion_bst2"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.javatpoint.com/deletion-in-binary-search-tree">javatpoint.com</a></p>
 
@@ -208,7 +208,7 @@ def insert(self, value, node=None):
 
 마지막은 삭제하려는 값이 있는 노드가 두 개의 자식 노드를 갖는 경우입니다. 가장 까다로운 경우입니다. 기본적인 아이디어는 기존에 트리에 존재하는 다른 값으로 대체하여 넣어준 뒤에 중복되는 값을 삭제하는 것입니다. 아래 그림을 보겠습니다.
 
-![tree_del3](https://user-images.githubusercontent.com/45377884/86538978-454b7880-bf34-11ea-98e0-191b3588eb97.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/86538978-454b7880-bf34-11ea-98e0-191b3588eb97.png" alt="tree_del3"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.edwith.org/datastructure-2019s/notice/1658">데이터 구조 및 분석 수업자료</a></p>
 
@@ -312,7 +312,7 @@ Traverse는 '가로지르다'라는 뜻을 가진 단어입니다. 연결된 리
 
 Traversing의 방법은 크게 **깊이 우선 탐색법(Depth first search, DFS)** 과 **너비 우선 탐색법(Breadth first search, BFS)** 두 가지로 나뉩니다. 먼저 깊이 우선 탐색법에 대해 알아봅시다. 깊이 우선 탐색법은 순서에 따라 3가지 방법이 있습니다. 첫 번째가 현재 노드의 값을 탐색한 후 LHS, RHS 순서로 탐색하는 **Pre-order Traverse** 입니다. 두 번째는 LHS를 먼저 탐색하고 현재 노드의 값을 탐색한 후 RHS값을 탐색하는 **In-order Traverse** 입니다. 마지막 방법으로는 LHS와 RHS를 모두 탐색한 후 맨 마지막에 현재 노드의 값을 탐색하는 Post-order Traverse가 있습니다. 아래의 트리를 보며 설명을 이어나가겠습니다. 아래의 노드를 각 방법으로 Traversing 해보겠습니다.
 
-![traversing](https://user-images.githubusercontent.com/45377884/90396747-b6ed1980-e0d1-11ea-917e-22d2814a2b5b.png)
+<p align="center"><img src="https://user-images.githubusercontent.com/45377884/90396747-b6ed1980-e0d1-11ea-917e-22d2814a2b5b.png" alt="traversing"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
@@ -324,13 +324,13 @@ Traversing의 방법은 크게 **깊이 우선 탐색법(Depth first search, DFS
 
 다음은 In-order 방식입니다. 이 방식은 LHS를 따라 내려간 노드 - 현재 노드 - RHS를 따라 내려간 노드 순으로 탐색합니다. 아래 그림과 같은 방법으로 탐색이 이루어집니다. 현재 노드의 값을 얻지 않고 일단 LHS가 없을 때까지 내려가기 때문에 가장 왼쪽 아래에서부터 탐색이 시작되는 것을 볼 수 있습니다.
 
-![in-order](https://miro.medium.com/max/500/1*bxQlukgMC9cGv_MFUllX2Q.gif)
+<p align="center"><img src="https://miro.medium.com/max/500/1*bxQlukgMC9cGv_MFUllX2Q.gif" alt="in-order"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
 다음은 Post-order 방식입니다. 이 방식은 LHS를 따라 내려간 노드 - RHS를 따라 내려간 노드 - 현재 노드 순으로 탐색합니다. 아래 그림과 같은 방법으로 탐색이 이루어집니다. 현재 노드의 값을 얻지 않고 일단 LHS와 RHS가 모두 없을 때까지 내려가기 때문에 가장 왼쪽 아래에서부터 아래쪽을 다 훑고 난 후에 위로 올라오는 방향으로 탐색이 되는 것을 볼 수 있습니다.
 
-![post-order](https://miro.medium.com/max/500/1*UGrzA4qtLCaaCiNAKZyj_w.gif)
+<p align="center"><img src="https://miro.medium.com/max/500/1*UGrzA4qtLCaaCiNAKZyj_w.gif" alt="post-order"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
@@ -387,7 +387,7 @@ def traversePostOrder(self, node=None):
 
 다음은 너비 우선 탐색법에 대해 알아보겠습니다. 이 방법은 같은 높이에 있는 것부터 탐색합니다. 루트 노드부터 탐색을 하게 되며 위쪽 레벨(level)의 노드를 모두 거치고 난 후 아래쪽 레벨로 내려갑니다. 아래 그림처럼 탐색이 이루어집니다.
 
-![bfs](https://miro.medium.com/max/500/1*2NIfAdSadsdK2rP015f6Xg.gif)
+<p align="center"><img src="https://miro.medium.com/max/500/1*2NIfAdSadsdK2rP015f6Xg.gif" alt="bfs"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/4-types-of-tree-traversal-algorithms-d56328450846">towardsdatascience.com</a></p>
 
