--- a/_posts/2020-02-19-overview.md
+++ b/_posts/2020-02-19-overview.md
@@ -32,7 +32,7 @@ tag: Machine-Learning
 
 - k-최근접 이웃(k-nearest neighbors, kNN)
 
-<img src="https://machinelearningknowledge.ai/wp-content/uploads/2018/08/KNN-Classification.gif" alt="knn" style="zoom:50%;" />
+<p align="center"><img src="https://machinelearningknowledge.ai/wp-content/uploads/2018/08/KNN-Classification.gif" alt="knn" style="zoom:50%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://machinelearningknowledge.ai/k-nearest-neighbor-classification-simple-explanation-beginners/">machinelearningknowledge.ai</a></p>
 
@@ -44,7 +44,7 @@ tag: Machine-Learning
 
 - [로지스틱 회귀(Logistic regression)](https://yngie-c.github.io/machine learning/2020/04/19/Logistic-Regression/)
 
-<img src="https://miro.medium.com/max/640/1*CYAn9ACXrWX3IneHSoMVOQ.gif" alt="logistic_reg" style="zoom: 80%;" />
+<p align="center"><img src="https://miro.medium.com/max/640/1*CYAn9ACXrWX3IneHSoMVOQ.gif" alt="logistic_reg" style="zoom: 80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/logistic-regression-explained-and-implemented-in-python-880955306060">towardsdatascience.com</a></p>
 
@@ -56,7 +56,7 @@ tag: Machine-Learning
 
 - [의사 결정 나무(Decision Tree)](https://yngie-c.github.io/machine learning/2020/04/06/decision_tree/) 등
 
-<img src="https://annalyzin.files.wordpress.com/2016/07/decision-tree-tutorial-animated3.gif?w=636&amp;h=312&amp;crop=1" alt="decision_tree" style="zoom:85%;" />
+<p align="center"><img src="https://annalyzin.files.wordpress.com/2016/07/decision-tree-tutorial-animated3.gif?w=636&amp;h=312&amp;crop=1" alt="decision_tree" style="zoom:85%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://algobeans.com/2016/07/27/decision-trees-tutorial/">algobeans.com</a></p>
 
@@ -67,7 +67,7 @@ tag: Machine-Learning
   - 계층 군집 분석(Hierarchical cluster analysis, HCA)
   - 기댓값 최대화(Expectation maximization)
 
-<img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/K-means_convergence.gif" alt="clustering" style="zoom:50%;" />
+<p align="center"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ea/K-means_convergence.gif" alt="clustering" style="zoom:50%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://commons.wikimedia.org/wiki/File:K-means_convergence.gif">위키피디아 - K-means</a></p>
 
@@ -75,14 +75,14 @@ tag: Machine-Learning
   - 주성분 분석(Principle component analysis, PCA), 커널 PCA(kernal PCA)
   - 지역적 선형 임베딩(Locally-Linear Embedding, LLE), t-SNE(t-distributed Stochastic Neighbor Embedding) 등이 있습니다.
 
-<img src="https://3.bp.blogspot.com/-NE01azL_JxU/Wxli17oYNzI/AAAAAAAACxQ/axOI2yy-Ft0QbqaekOyemm5Xn0wAFvRUwCLcBGAs/s640/image2.gif" alt="visualization" style="zoom:75%;" />
+<p align="center"><img src="https://3.bp.blogspot.com/-NE01azL_JxU/Wxli17oYNzI/AAAAAAAACxQ/axOI2yy-Ft0QbqaekOyemm5Xn0wAFvRUwCLcBGAs/s640/image2.gif" alt="visualization" style="zoom:75%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://ai.googleblog.com/2018/06/realtime-tsne-visualizations-with.html">ai.googleblog.com</a></p>
 
 - 연관 규칙 학습
   - 아프리오리(Apriori), 이클렛(Eclat)
 
-<img src="https://annalyzin.files.wordpress.com/2016/04/association-rules-network-graph2.png?w=662&amp;h=558" alt="association" style="zoom: 67%;" />
+<p align="center"><img src="https://annalyzin.files.wordpress.com/2016/04/association-rules-network-graph2.png?w=662&amp;h=558" alt="association" style="zoom: 67%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://algobeans.com/2016/04/01/association-rules-and-the-apriori-algorithm/">algobeans.com</a></p>
 
@@ -90,7 +90,7 @@ tag: Machine-Learning
 
 마지막은 **강화 학습**입니다. 강화 학습은 지도 학습이나 비지도 학습과는 다른 방식으로 학습이 진행됩니다. 강화 학습에서 학습하는 시스템은 에이전트(Agent)라고 불립니다. 이 에이전트는 현재 상태(State)에서 주변 환경을 관찰하여 행동(Action)을 실행하고 그 결과로 보상(Reward) 혹은 벌점(Panelty)를 받습니다. 같은 작업을 계속 반복하면서 가장 큰 보상을 얻기 위한 최상의 전략을 스스로 학습하게 됩니다.
 
-![reinforcement](https://openai.com/content/images/2017/06/spaceinvadersbehavior.gif)
+<p align="center"><img src="https://openai.com/content/images/2017/06/spaceinvadersbehavior.gif" alt="reinforcement"  /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://openai.com/blog/deep-reinforcement-learning-from-human-preferences/">openai.com</a></p>
 
@@ -110,7 +110,7 @@ tag: Machine-Learning
 
 **과적합(Overfitting, 과대적합)**과 **과소적합(Underfitting)**의 발생도 주요한 문제입니다. 과적합은 생성한 모델이 훈련 데이터에 너무 잘 맞아버려 일반화(Generalization)되지 않는 현상입니다. 과적합 문제를 해결하기 위해서는 파라미터가 적은 모델을 선택하기, 훈련 데이터에 있는 특성 수를 축소하기, 모델에 규제 적용하기 등의 방법을 통해 단순한 모델을 생성합니다. 과소적합은  너무 단순한 모델이 생성되어 데이터에 잘 맞지 않는 현상입니다. 과소적합 문제를 해결하기 위해서 파라미터가 많은 모델을 선택하거나 학습 알고리즘에 더 좋은 특성을 제공하고 모델의 제약을 줄임으로써 복잡한 모델을 생성합니다. 아래는 이미지의 왼쪽은 과소적합, 오른쪽은 과적합이 발생한 경우를 그림으로 나타낸 것입니다. 
 
-<img src="https://www.educative.io/api/edpresso/shot/6668977167138816/image/5033807687188480" alt="over_under_fit" style="zoom: 80%;" />
+<p align="center"><img src="https://www.educative.io/api/edpresso/shot/6668977167138816/image/5033807687188480" alt="over_under_fit" style="zoom: 80%;" /></p>
 
 <p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.educative.io/edpresso/overfitting-and-underfitting">educative.io</a></p>
 
