--- a/_posts/2020-02-19-overview.md
+++ b/_posts/2020-02-19-overview.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 머신러닝 개요(Overview)
+title: 머신러닝 개요 (Overview)
 category: Machine Learning
 tag: Machine-Learning
 ---
@@ -116,4 +116,4 @@ tag: Machine-Learning
 
 
 
-과적합과 과소적합에 대한 추가적인 정보는 [과적합과 과소적합](https://yngie-c.github.io/machine learning/2020/04/30/training_test_reg/)에서 볼 수 있습니다.
+과적합과 과소적합에 대한 추가적인 정보는 [과적합과 과소적합 (Overfitting & Underfitting)](https://yngie-c.github.io/machine learning/2020/04/30/training_test_reg/)에서 볼 수 있습니다.
