--- a/_posts/2020-05-24-nlp_nplm.md
+++ b/_posts/2020-05-24-nlp_nplm.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 임베딩과 신경망 언어 모델 (NPLM)
+title: 단어 임베딩 (Word Embedding)과 신경망 언어 모델 (NPLM)
 category: NLP
 tag: NLP
 ---
@@ -11,46 +11,48 @@ tag: NLP
 
 
 
-# Word Embedding
+# Distributed Representation
 
-단어를 벡터화 하는 가장 단순하고 직관적인 방법은 **원-핫 인코딩(One-hot Encoding)** 이다. 원-핫 인코딩은 문서에서 전체에 있는 단어 개수 만큼의 크기를 갖고 모든 요소가 0인 벡터를 만든 뒤 단어가 등장하는 순서에 따라 해당 인덱스를 1로 변환하는 방식이다. 예를 들어 *"I go to school"* 에 있는 단어들을 원-핫 인코딩으로 나타내면 아래와 같다.
+지금까지 알아본 [Bag of Words](https://yngie-c.github.io/nlp/2020/05/12/nlp_bow/), [TF-IDF](https://yngie-c.github.io/nlp/2020/05/16/nlp_tf-idf/), [N-gram](https://yngie-c.github.io/nlp/2020/05/22/nlp_ngram/) 방법론은 단어를 등장 횟수 기반으로 벡터로 표현(Count-based representation)하는 방식이었습니다. 이번에는 등장 횟수가 아닌 **단어의 분산 표현(Distributed representation)**방법에 대해 알아볼 것입니다.
 
+횟수 기반 표현을 사용하지 않고 단어를 벡터화하는 가장 단순하고 직관적인 방법은 **원-핫 인코딩(One-hot Encoding)**입니다. 원-핫 인코딩은 적용하는 방법은 다음과 같습니다. 일단 문서에 존재하는 단어의 개수 만큼의 차원을 가진 영벡터를 만듭니다. 그리고 단어가 등장하는 순서에 따라 해당 인덱스를 1로 변환한 뒤 그 단어의 벡터로 매칭시켜줍니다. 예를 들어,  *"What's your name? My name is Yngie."* 라는 문장에 있는 단어를 원-핫 인코딩을 사용하여 벡터로 표현하면 다음과 같습니다.
 
-$$
-\qquad \text{I} : \left[{\begin{array}{cccc} 1 & 0 & 0 & 0  \end{array}}\right] \\
-\quad \text{go} : \left[{\begin{array}{cccc} 0 & 1 & 0 & 0  \end{array}}\right] \\
-\quad \text{to} : \left[{\begin{array}{cccc} 0 & 0 & 1 & 0  \end{array}}\right] \\
-\text{school} : \left[{\begin{array}{cccc} 0 & 0 & 0 & 1  \end{array}}\right]
-$$
+> what : $\left[{\begin{array}{cccccc} 1 & 0 & 0 & 0 & 0 & 0 \end{array}}\right]$
+> is : $\left[{\begin{array}{cccccc} 0 & 1 & 0 & 0 & 0 & 0 \end{array}}\right]$
+> your : $\left[{\begin{array}{cccccc} 0 & 0 & 1 & 0 & 0 & 0 \end{array}}\right]$
+> name : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 1 & 0 & 0 \end{array}}\right]$
+> my : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 1 & 0 \end{array}}\right]$
+> Yngie : $\left[{\begin{array}{cccccc} 0 & 0 & 0 & 0 & 0 & 1 \end{array}}\right]$
 
-원-핫 인코딩은 단순하고 쉽다는 장점이 있다. 하지만 모든 단어 벡터끼리의 내적이 항상 0이 나오기 때문에 단어 간의 관계를 파악하기 어렵다는 단점을 가지고 있다. 이런 문제를 해결하기 위한 방법으로 **분산 표현(Distributed Representation)** 방법이 있다. 단어를 벡터로 분산 표현하는 방법, 즉 **임베딩(Embedding)** 은 단어를 문서 내 단어의 개수 $\vert V \vert$ 보다 훨씬 작은 숫자인 $n$ 차원의 벡터로 나타낸다. 또한 벡터 내 성분이 연속적인 숫자이기 때문에 단어 벡터의 내적 값이 0이 아니게 되고 덕분에 단어 간의 의미론(Semantic)적인 관계가 보존된다.
-
-<p align="center"><img src="https://www.offconvex.org/assets/analogy-small.jpg" alt="embedding" style="zoom:50%;" /></p>
-
-<p align="center" style="font-size:80%">이미지 출처 : <a href="https://www.offconvex.org/2015/12/12/word-embeddings-1/">offconvex.org</a></p>
-
-
-
-## NPLM
-
-**확률기반 신경망 언어 모델(Neural Probilistic Language Model, NNLM)** 은 가장 고전적인 분산 표현 방식이다. 각 단어를 분산 단어 피처 벡터로 표현한다. 이 피처 벡터끼리의 결합 확률분포 함수(Joint probability function)을 이용하여 단어 시퀀스가 발생할 확률을 계산할 수 있다. 어떤 단어 피처 벡터가 좋은지와 이를 통해서 나타나는 확률 함수의 파라미터를 동시에 학습할 수 있다.
-
-NPLM에서는 *(dog, cat), (the, a), (bedroom, room), (is, was), (running, walking)* 의 단어쌍이 의미적, 구조적으로 유사한 역할을 하고 있다면 우리는 이를 사용해 *The cat is walking in the bedroom* 이라는 문장을 다음과 같이 일반화 해볼 수 있다.
-
-*A dog was running in a room, The cat is running is a room, A dog is walking in a bedroom, The dog was walking in the room ...*
-
-NPLM이 N-gram과 같은 Count 기반의 언어 모델과 다른 점은 무엇인가? 기본의 Count 기반 언어 모델에서 단어 시퀀스는 Chain rule에 의해 아래와 같이 Factorization 될 수 있고, 특히 N-gram 모델에서는 마르코프 가정(Markov Assumption)을 사용하여 타깃 단어 이전에 있는 몇 단어(n개의 단어)에 대해서만 계산했다.
-
+원-핫 인코딩은 단순하고 이해하기 쉽다는 장점이 있습니다. 하지만 단어끼리의 관계를 모사할 수가 없게 됩니다. 벡터 간 유사도를 판단하는 방법은 다양하지만, 단어 벡터 사이의 유사도를 판단하는 데에는 주로 **코사인 유사도(Cosine similarity)**가 사용됩니다. 코사인 유사도의 수식은 다음과 같습니다.
 
 
 $$
-p(w_1, \cdots , w_T) = \prod^T_{i=1} p(w_t|w_1, \cdots , w_{t-1}) \\
-p(w_t|w_1, \cdots , w_t) \approx p(w_t|w_{t-n}, \cdots, w_{t-1})
+\text{similarity}(\vec{x},\vec{y}) = \frac{\vec{x} \cdot \vec{y}}{\Vert\vec{x}\Vert \Vert\vec{y}\Vert} = \frac{x_1y_1 + \cdots + x_ny_n}{\sqrt{x_1^2+\cdots+x_n^2} \sqrt{y_1^2+\cdots+y_n^2}}
 $$
 
 
+원-핫 인코딩으로 생성된 임의의 서로 다른 두 단어 벡터 $\vec{x_o}, \vec{y_o}$ 의 단어간 유사도를 구하기 위해 코사인 유사도 식에 대입하면 어떻게 될까요? 결과만 보자면 모두 0이 나오게 됩니다. 원-핫 인코딩으로 생성된 서로 다른 벡터를 내적한 값 $\vec{x_o} \cdot \vec{y_o}$ 은 언제나 0이 나오기 때문입니다. 이 때문에 원-핫 인코딩은 단어의 의미 관계를 전혀 표현하지 못하게 됩니다.
 
-NPLM은 위 방식과는 다르다. NNLM 에서는 단어를 $n(<< \vert V \vert)$ 차원 벡터 공간 내의 밀집 벡터(dense vectors)로 표현한다. 그리고 신경망이 특정 단어 다음에 올 단어 벡터가 어떤 것이 될 지에 대해서 훈련하게 된다.
+이런 문제를 해결하기 위해서 분산 표현 방식인 **단어 임베딩(Word Embedding)**이 고안되었습니다. 임베딩은 단어를 문서 내 단어의 개수 $\vert V \vert$보다 훨씬 작은 숫자인 $n$ 차원의 벡터로 나타냅니다. 임베딩을 통해 나타내어지는 단어 벡터는 성분이 0, 1이 아닌 연속적인 숫자로 구성되어 있습니다. 그렇기 때문에 단어 벡터끼리 내적하여도 0이 아니게 되며 단어 간의 의미(Semantic) 관계가 보존된다는 장점을 가지고 있습니다. 아래 그림은 임베딩을 통해 추출해낸 단어 벡터 간의 관계를 시각화한 것입니다.
+
+<img src="https://miro.medium.com/max/700/1*OEmWDt4eztOcm5pr2QbxfA.png" alt="embedding"  />
+
+<p align="center" style="font-size:80%">이미지 출처 : <a href="https://towardsdatascience.com/creating-word-embeddings-coding-the-word2vec-algorithm-in-python-using-deep-learning-b337d0ba17a8">towardsdatascience.com</a></p>
+
+
+
+## Neural Network Language Model
+
+**신경망 언어 모델(Neural Probilistic Language Model, NNLM)**은 기존 [단어 횟수 기반의 언어 모델(Language models)](https://yngie-c.github.io/nlp/2020/05/22/nlp_ngram/)의 단점을 극복하고자 만들어진 방법입니다. 이후에 배울 단어 임베딩 방법보다는 고전적인 방법이지만 신경망을 활용하여 단어 임베딩을 할 수 있다는 것을 제안했다는 점에서 의의가 적지 않습니다.
+
+신경망 언어 모델에서 각 단어는 임베딩을 통해 $n$ 차원의 벡터로 표현됩니다. 이 단어 벡터를 언어 모델에 적용했을 때의 장점은 무엇일까요? 기존의 언어 모델은 횟수를 기반으로 등장 확률을 결정하기 때문에 말뭉치에 한 번도 등장하지 않은 시퀀스에 대해서는 등장 확률이 0이 된다는 단점이 있었습니다. 예를 들어, *"마라룽샤를 요리하다."* 라는 단어 시퀀스가 말뭉치에 등장하지 않는다면 이 시퀀스가 생성될 확률 역시 0이 됩니다.
+
+하지만 임베딩을 통해 표현된 단어 벡터는 의미 관계를 가지고 있기 때문에 다릅니다. 예를 들어, *(마라탕, 마라샹궈, 마라룽샤)*라는 세 단어묶음, *(요리하다, 먹다)* 의 관계가 비슷하다고 학습한 모델이 있다고 합시다. 이 모델은 말뭉치에 *"마라탕을 먹다"* 라는 시퀀스만 있더라도 *"마라샹궈를 먹다, 마라탕을 요리하다, 마라룽샤를 먹다, 마라룽샤를 요리하다"* 등 다양한 단어 시퀀스를 생성할 수 있게 됩니다. 이제 더 이상 말뭉치 시퀀스에 집착하지 않아도 되는 것이지요.
+
+
+
+NPLM은 위 방식과는 다르다. NNLM 에서는 단어를 $n(\ll \vert V \vert)$ 차원 벡터 공간 내의 밀집 벡터(dense vectors)로 표현한다. 그리고 신경망이 특정 단어 다음에 올 단어 벡터가 어떤 것이 될 지에 대해서 훈련하게 된다.
 
 
 $$
